[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/img/UI/BOX_EQUIP_2.png" type="Texture" id=1]
[ext_resource path="res://assets/img/UI/MENU_BOX_4.png" type="Texture" id=2]
[ext_resource path="res://assets/img/UI/MENU_BOX_1.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/NPCTrade.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/img/UI/down.png" type="Texture" id=5]
[ext_resource path="res://assets/img/UI/up.png" type="Texture" id=6]
[ext_resource path="res://assets/img/UI/button_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/fonts/uibutton.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/fonts/text16.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/scene/UI/MerchantUI.gd" type="Script" id=10]

[node name="Alchemy" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="First" type="CenterContainer" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 240.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mask2" type="ColorRect" parent="First"]
margin_left = -350.0
margin_top = -200.0
margin_right = 350.0
margin_bottom = 200.0
rect_min_size = Vector2( 700, 400 )
color = Color( 0.258824, 0.247059, 0.247059, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="First"]
margin_left = -160.0
margin_top = -120.0
margin_right = 160.0
margin_bottom = 120.0
rect_min_size = Vector2( 320, 240 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="First"]
margin_left = -67.0
margin_top = -58.0
margin_right = 67.0
margin_bottom = 58.0
custom_constants/separation = 13
alignment = 1

[node name="Label" type="Label" parent="First/VBoxContainer"]
margin_right = 134.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 9 )
text = "Umion Alchemy"
align = 1
valign = 1

[node name="Create" type="Button" parent="First/VBoxContainer"]
margin_top = 53.0
margin_right = 134.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 8 )
text = "Create"

[node name="Sell" type="Button" parent="First/VBoxContainer"]
visible = false
margin_top = 91.0
margin_right = 134.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 8 )

[node name="Back" type="Button" parent="First/VBoxContainer"]
margin_top = 91.0
margin_right = 134.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 8 )
text = "Back"

[node name="Second" type="MarginContainer" parent="."]
margin_left = -298.378
margin_top = -242.699
margin_right = -298.378
margin_bottom = 357.301
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="Second"]
margin_bottom = 600.0

[node name="Mask" type="ColorRect" parent="Second/Content"]
margin_left = -395.0
margin_top = -116.0
margin_right = 1036.0
margin_bottom = 734.0
color = Color( 0.258824, 0.247059, 0.247059, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="Second/Content"]
margin_left = 183.0
margin_top = 98.699
margin_right = 387.0
margin_bottom = 418.699
texture = ExtResource( 1 )
patch_margin_top = 19
patch_margin_bottom = 151
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="NinePatchRect" parent="Second/Content"]
margin_left = 386.378
margin_top = 90.699
margin_right = 635.378
margin_bottom = 270.699
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="NinePatchRect" parent="Second/Content"]
margin_left = 386.378
margin_top = 250.699
margin_right = 636.378
margin_bottom = 430.699
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="NinePatchRect" parent="Second/Content"]
margin_left = 6.0
margin_top = 67.0
margin_right = 182.0
margin_bottom = 451.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Second/Content"]
margin_left = 134.378
margin_top = 149.016
margin_right = 434.378
margin_bottom = 399.016
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemBox" type="GridContainer" parent="Second/Content/ScrollContainer"]
margin_right = 300.0
rect_min_size = Vector2( 300, 0 )
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemInfo" type="ScrollContainer" parent="Second/Content"]
margin_left = 415.751
margin_top = 126.016
margin_right = 595.751
margin_bottom = 236.016
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="MarginContainer" parent="Second/Content/ItemInfo"]
margin_right = 170.0
margin_bottom = 117.0

[node name="Welcome" type="VBoxContainer" parent="Second/Content/ItemInfo/Control"]
visible = false
margin_right = 179.0
margin_bottom = 117.0
alignment = 1

[node name="Label" type="Label" parent="Second/Content/ItemInfo/Control/Welcome"]
margin_right = 179.0
margin_bottom = 110.0
rect_min_size = Vector2( 179, 110 )
custom_fonts/font = ExtResource( 4 )
text = "Welcome to Myrid
Merchant Shop!

Pick your item and buy many as you want"
align = 1
valign = 1
autowrap = true

[node name="Description" type="VBoxContainer" parent="Second/Content/ItemInfo/Control"]
margin_right = 170.0
margin_bottom = 117.0
alignment = 1

[node name="ItemName" type="Label" parent="Second/Content/ItemInfo/Control/Description"]
margin_right = 170.0
margin_bottom = 19.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = ExtResource( 8 )
text = "Anendote"
autowrap = true

[node name="ItemType" type="Label" parent="Second/Content/ItemInfo/Control/Description"]
margin_top = 23.0
margin_right = 170.0
margin_bottom = 43.0
rect_min_size = Vector2( 170, 20 )
custom_fonts/font = ExtResource( 4 )
text = "Consumsables"
autowrap = true

[node name="ItemAttr" type="Label" parent="Second/Content/ItemInfo/Control/Description"]
margin_top = 47.0
margin_right = 170.0
margin_bottom = 62.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Attribute: "
autowrap = true

[node name="ItemPollen" type="Label" parent="Second/Content/ItemInfo/Control/Description"]
visible = false
margin_top = 66.0
margin_right = 170.0
margin_bottom = 81.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Pollen: 50 "
autowrap = true

[node name="ItemFoL" type="Label" parent="Second/Content/ItemInfo/Control/Description"]
visible = false
margin_top = 85.0
margin_right = 170.0
margin_bottom = 100.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Flower of Light: 50 "
autowrap = true

[node name="ItemDesc" type="Label" parent="Second/Content/ItemInfo/Control/Description"]
margin_top = 66.0
margin_right = 170.0
margin_bottom = 117.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Super item for maybe maybeadiahihafiaifhiahfiasfhaifhiahfdafa"
autowrap = true

[node name="ItemMonitor" type="VBoxContainer" parent="Second/Content"]
margin_left = 417.001
margin_top = 288.076
margin_right = 597.001
margin_bottom = 398.076
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="VBoxContainer" parent="Second/Content/ItemMonitor"]
margin_right = 179.0
margin_bottom = 110.0
custom_constants/separation = 10
alignment = 1

[node name="Pollen" type="HBoxContainer" parent="Second/Content/ItemMonitor/HBoxContainer2"]
margin_right = 179.0
margin_bottom = 15.0

[node name="Label" type="Label" parent="Second/Content/ItemMonitor/HBoxContainer2/Pollen"]
margin_right = 91.0
margin_bottom = 15.0
rect_min_size = Vector2( 91, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Pollen"

[node name="PollenValue" type="Label" parent="Second/Content/ItemMonitor/HBoxContainer2/Pollen"]
margin_left = 95.0
margin_right = 103.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="FoL" type="HBoxContainer" parent="Second/Content/ItemMonitor/HBoxContainer2"]
margin_top = 25.0
margin_right = 179.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Second/Content/ItemMonitor/HBoxContainer2/FoL"]
margin_right = 91.0
margin_bottom = 15.0
rect_min_size = Vector2( 91, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Flower of Light"

[node name="FoLValue" type="Label" parent="Second/Content/ItemMonitor/HBoxContainer2/FoL"]
margin_left = 95.0
margin_right = 103.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="Option" type="Button" parent="Second/Content/ItemMonitor/HBoxContainer2"]
margin_top = 50.0
margin_right = 179.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 8 )
disabled = true
text = "Buy"

[node name="Back" type="Button" parent="Second/Content/ItemMonitor/HBoxContainer2"]
margin_top = 85.0
margin_right = 179.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 8 )
text = "Back"

[node name="Popup" type="Control" parent="Second"]
visible = false
margin_bottom = 600.0

[node name="PopupRect" type="ColorRect" parent="Second/Popup"]
margin_left = -395.0
margin_top = -109.0
margin_right = 398.0
margin_bottom = 734.0
color = Color( 0.258824, 0.247059, 0.247059, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupRect2" type="ColorRect" parent="Second/Popup"]
margin_left = 614.0
margin_top = -116.0
margin_right = 1032.0
margin_bottom = 727.0
color = Color( 0.258824, 0.247059, 0.247059, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupRect3" type="ColorRect" parent="Second/Popup"]
margin_left = 398.0
margin_top = -112.0
margin_right = 614.0
margin_bottom = 267.0
color = Color( 0.258824, 0.247059, 0.247059, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupRect4" type="ColorRect" parent="Second/Popup"]
margin_left = 398.378
margin_top = 330.699
margin_right = 614.378
margin_bottom = 709.699
color = Color( 0.258824, 0.247059, 0.247059, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="NinePatchRect" parent="Second/Popup"]
margin_left = 30.3396
margin_top = 129.448
margin_right = 390.34
margin_bottom = 394.448
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="VBoxContainer" parent="Second/Popup"]
margin_left = 59.4888
margin_top = 162.922
margin_right = 359.489
margin_bottom = 372.922
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tag" type="Label" parent="Second/Popup/Control"]
margin_right = 300.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 4 )
text = "Buy Item"
align = 1

[node name="Margin" type="Label" parent="Second/Popup/Control"]
margin_top = 19.0
margin_right = 300.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 5 )
custom_fonts/font = ExtResource( 9 )
align = 1

[node name="NameandStack" type="Label" parent="Second/Popup/Control"]
margin_top = 45.0
margin_right = 300.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 4 )
text = "Item: Cursed Sand"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Second/Popup/Control"]
margin_top = 79.0
margin_right = 300.0
margin_bottom = 110.0
custom_constants/separation = 2
alignment = 1

[node name="LineEdit" type="LineEdit" parent="Second/Popup/Control/HBoxContainer"]
margin_left = 85.0
margin_right = 131.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 4 )
align = 1
max_length = 3

[node name="Up" type="Button" parent="Second/Popup/Control/HBoxContainer"]
margin_left = 133.0
margin_right = 173.0
margin_bottom = 31.0
custom_styles/normal = ExtResource( 7 )
icon = ExtResource( 6 )

[node name="Down" type="Button" parent="Second/Popup/Control/HBoxContainer"]
margin_left = 175.0
margin_right = 215.0
margin_bottom = 31.0
custom_styles/normal = ExtResource( 7 )
icon = ExtResource( 5 )

[node name="PriceTag" type="Label" parent="Second/Popup/Control"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = ExtResource( 4 )
text = "Price:"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Second/Popup/Control"]
margin_top = 138.0
margin_right = 300.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 50
alignment = 1

[node name="PricePollen" type="Label" parent="Second/Popup/Control/HBoxContainer3"]
visible = false
margin_left = 84.0
margin_top = 5.0
margin_right = 131.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = ExtResource( 4 )
text = "Pollen: 0"
align = 1
valign = 1

[node name="PriceFoL" type="Label" parent="Second/Popup/Control/HBoxContainer3"]
visible = false
margin_left = 133.0
margin_top = 5.0
margin_right = 167.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = ExtResource( 4 )
text = "FoL: 0"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Second/Popup/Control"]
margin_top = 172.0
margin_right = 300.0
margin_bottom = 197.0
custom_constants/separation = 10
alignment = 1

[node name="Accept" type="Button" parent="Second/Popup/Control/HBoxContainer2"]
margin_left = 77.0
margin_right = 146.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 8 )
text = "Accept"

[node name="Cancel" type="Button" parent="Second/Popup/Control/HBoxContainer2"]
margin_left = 156.0
margin_right = 223.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 8 )
text = "Cancel"
[connection signal="mouse_entered" from="First/VBoxContainer/Create" to="." method="_on_BtnSFX_mouse_entered"]
[connection signal="pressed" from="First/VBoxContainer/Create" to="." method="_on_Buy_pressed"]
[connection signal="mouse_entered" from="First/VBoxContainer/Back" to="." method="_on_BtnSFX_mouse_entered"]
[connection signal="pressed" from="First/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Second/Content/ItemMonitor/HBoxContainer2/Option" to="." method="_on_BtnSFX_mouse_entered"]
[connection signal="pressed" from="Second/Content/ItemMonitor/HBoxContainer2/Option" to="." method="_on_Option_pressed"]
[connection signal="mouse_entered" from="Second/Content/ItemMonitor/HBoxContainer2/Back" to="." method="_on_BtnSFX_mouse_entered"]
[connection signal="pressed" from="Second/Content/ItemMonitor/HBoxContainer2/Back" to="." method="_on_Back2_pressed"]
[connection signal="text_change_rejected" from="Second/Popup/Control/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_change_rejected"]
[connection signal="text_entered" from="Second/Popup/Control/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Second/Popup/Control/HBoxContainer/Up" to="." method="_on_Up_pressed"]
[connection signal="button_down" from="Second/Popup/Control/HBoxContainer/Down" to="." method="_on_Down_button_down"]
[connection signal="mouse_entered" from="Second/Popup/Control/HBoxContainer2/Accept" to="." method="_on_BtnSFX_mouse_entered"]
[connection signal="pressed" from="Second/Popup/Control/HBoxContainer2/Accept" to="." method="_on_Accept_pressed"]
[connection signal="mouse_entered" from="Second/Popup/Control/HBoxContainer2/Cancel" to="." method="_on_BtnSFX_mouse_entered"]
[connection signal="pressed" from="Second/Popup/Control/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
